@@ -12920,16 +12920,110 @@ operator|.
 name|getStorageHandler
 argument_list|()
 decl_stmt|;
+comment|/*      * We use LazySimpleSerDe by default.      *      * If the user didn't specify a SerDe, and any of the columns are not simple      * types, we will have to use DynamicSerDe instead.      */
 if|if
 condition|(
 name|crtTbl
 operator|.
 name|getSerName
 argument_list|()
-operator|!=
+operator|==
 literal|null
 condition|)
 block|{
+if|if
+condition|(
+name|storageHandler
+operator|==
+literal|null
+condition|)
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Default to LazySimpleSerDe for table "
+operator|+
+name|crtTbl
+operator|.
+name|getTableName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|tbl
+operator|.
+name|setSerializationLib
+argument_list|(
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|serde2
+operator|.
+name|lazy
+operator|.
+name|LazySimpleSerDe
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|String
+name|serDeClassName
+init|=
+name|storageHandler
+operator|.
+name|getSerDeClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+decl_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Use StorageHandler-supplied "
+operator|+
+name|serDeClassName
+operator|+
+literal|" for table "
+operator|+
+name|crtTbl
+operator|.
+name|getTableName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|tbl
+operator|.
+name|setSerializationLib
+argument_list|(
+name|serDeClassName
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+comment|// let's validate that the serde exists
+name|validateSerDe
+argument_list|(
+name|crtTbl
+operator|.
+name|getSerName
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|tbl
 operator|.
 name|setSerializationLib
@@ -12941,8 +13035,6 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
-else|else
-block|{
 if|if
 condition|(
 name|crtTbl
@@ -13082,7 +13174,6 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
-block|}
 if|if
 condition|(
 name|crtTbl
@@ -13152,111 +13243,6 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
-block|}
-comment|/*      * We use LazySimpleSerDe by default.      *      * If the user didn't specify a SerDe, and any of the columns are not simple      * types, we will have to use DynamicSerDe instead.      */
-if|if
-condition|(
-name|crtTbl
-operator|.
-name|getSerName
-argument_list|()
-operator|==
-literal|null
-condition|)
-block|{
-if|if
-condition|(
-name|storageHandler
-operator|==
-literal|null
-condition|)
-block|{
-name|LOG
-operator|.
-name|info
-argument_list|(
-literal|"Default to LazySimpleSerDe for table "
-operator|+
-name|crtTbl
-operator|.
-name|getTableName
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|tbl
-operator|.
-name|setSerializationLib
-argument_list|(
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hive
-operator|.
-name|serde2
-operator|.
-name|lazy
-operator|.
-name|LazySimpleSerDe
-operator|.
-name|class
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-name|String
-name|serDeClassName
-init|=
-name|storageHandler
-operator|.
-name|getSerDeClass
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-decl_stmt|;
-name|LOG
-operator|.
-name|info
-argument_list|(
-literal|"Use StorageHandler-supplied "
-operator|+
-name|serDeClassName
-operator|+
-literal|" for table "
-operator|+
-name|crtTbl
-operator|.
-name|getTableName
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|tbl
-operator|.
-name|setSerializationLib
-argument_list|(
-name|serDeClassName
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-else|else
-block|{
-comment|// let's validate that the serde exists
-name|validateSerDe
-argument_list|(
-name|crtTbl
-operator|.
-name|getSerName
-argument_list|()
-argument_list|)
-expr_stmt|;
 block|}
 if|if
 condition|(
